# InkPulse

./: .gitattributes  .gitignore  .gitmodules  README.md
cad/: README.md  analyze_pcb.py  audit_interference_426.py  audit_probe_426.py  check_aa_coverage.py  check_interf.py  enclosure.py  enclosure_426.py  fitcheck.py  fpc_reach.py  render_preview.py  render_preview_426.py  verify_v3.py
cad/output/: assembly.step  assembly_shell.step  back_cover.step  back_cover.stl  base.step  base.stl  bezel.step  bezel.stl  lid.step  lid.stl
cad/output/426/: assembly_context.step  assembly_print.step  back_cover.step  back_cover.stl  bezel.step  bezel.stl  bracket.step  bracket.stl
docs/mockups/: mockup-explorer.html
docs/superpowers/specs/: 426-pogo-gap-explain.html  (+14 more)
hardware/: PCB1.PcbDoc  PCB1.PcbDoc.htm  PCB1.step  PCB_Project.PrjPcb  README.md  Sheet1.SchDoc
hardware/archived/: PCB.DWG  PCB.step
openspec/: config.yaml
software/firmware/: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  sdkconfig.defaults
software/firmware/main/: CMakeLists.txt  Kconfig.projbuild  ble_prov.c  ble_prov.h  epd_uc8179.c  epd_uc8179.h  frame_client.c  frame_client.h  htu21d.c  htu21d.h  main.c  net_config.h  wifi_prov.c  wifi_prov.h
software/hub/: README.md  config.example.yaml  pyproject.toml  run.ps1  run.sh
software/hub/deploy/: README.md  claude-code.md  inkpulse-hub.service
software/hub/fonts/: .gitignore  download.sh
software/hub/hooks/: claude_status.sh  inkpulse_agent_tasks.sh
software/hub/inkpulse_hub/: __main__.py  config.py  discovery.py  models.py  server.py  state.py
software/hub/inkpulse_hub/collectors/: agent_tasks.py  env_history.py  events.py  habits.py  market.py  photos.py  todos.py  usage.py  weather.py
software/hub/inkpulse_hub/render/: dither.py  engine.py  grid.py  layouts.py  planes.py  profiles.py  registry.py  widgets.py
software/hub/inkpulse_hub/web/: config.html  todos.html
software/hub/skills/inkpulse-sync/: SKILL.md
software/hub/tests/: test_active_panel.py  test_agent_tasks.py  test_agent_tasks_api.py  test_bw426_integration.py  test_color_degrade.py  test_config.py  test_config_api.py  test_dashboard_enrich.py  test_device_mirror_api.py  test_discovery.py  test_engine.py  test_env_history.py  test_events.py  test_events_api.py  test_grid.py  test_habits.py  test_habits_api.py  test_hook_parse.py  test_layouts.py  test_layouts_api.py  test_layouts_store.py  test_main.py  test_market_api.py  test_market_net.py  test_market_parse.py  test_market_service.py  test_models.py  test_photos.py  test_photos_pinned.py  test_planes.py  test_profiles.py  test_realtime_sync.py  test_registry.py  test_runtime.py  test_server.py  test_signal.py  test_state.py  test_state_phase2.py  test_todos.py  test_todos_api.py  (+19 more)
software/hub/tests/fixtures/: session_sample.jsonl
software/hub/tools/font_eval/: README.md  render_candidates.py  serve_candidate.py
software/hub/web-ui/: index.html  package-lock.json  package.json  vite.config.js
software/hub/web-ui/src/: App.vue  api.js  store.js  styles.css
software/hub/web-ui/src/components/: PreviewPanel.vue  Sidebar.vue
software/hub/web-ui/src/sections/: Events.vue  Habits.vue  Market.vue  Overview.vue  Photos.vue  Screen.vue  Settings.vue  Todos.vue  Weather.vue
(+69 files in other folders)
