[project]
name = "inkpulse-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "cnlunar>=0.2",
    "zeroconf>=0.130",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["inkpulse_hub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
